openshift/config/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: tektutor
 annotations:
   haproxy.router.openshift.io/rewrite-target: / 
spec:
 rules:
   - host: tektutor.apps.ocp4.svtech.gay
     http:
       paths:
         - path: /welcome
           pathType: Prefix 
           backend:
             service:
                name: nginx
                port:
                  number: 8080
