openshift/config/ingress/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"haproxy.router.openshift.io/rewrite-target":"/"},"name":"tektutor","namespace":"tek-tutor"},"spec":{"rules":[{"host":"tektutor.apps.ocp4.svtech.gay","http":{"paths":[{"backend":{"service":{"name":"nginx","port":{"number":8080}}},"path":"/welcome","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2023-09-15T10:59:26Z"
  name: tektutor-jj9v5
  namespace: tek-tutor
spec:
  host: tektutor.apps.ocp4.svtech.gay
  path: /welcome
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
